--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://<alzemiro.github.io/<your-repository-name>",
+  "homepage": "https://alzemiro.github.io",
   "name": "portfolio-alzemiro",
   "private": true,
   "version": "0.0.0",
