--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://alzemiro.github.io/alzemiro.github.io",
   "name": "portfolio-alzemiro",
   "private": true,
   "version": "0.0.0",
