--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "homepage": "https://alzemiro.github.io/",
-  "name": "portfolio-alzemiro",
+  "homepage": "https://alzemiro.github.io/alzemiro.github.io/",
+  "name": "alzemiro.github.io",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint portfolio-alzemiro --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint alzemiro.github.io --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
