--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://alzemiro.github.io/alzemiro.github.io/",
+  "homepage": "https://alzemiro.github.io/portfolio/",
   "name": "alzemiro.github.io",
   "private": true,
   "version": "0.0.1",
